--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
 
 :root {
   --text: #1e1d29;
+  --heading : 2.2em;
   --grad: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 }
 
@@ -26,7 +27,7 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background-image: var(--grad);
-  border-radius: 1rem;
+  border-radius: 1em;
 }
 
 section {
@@ -38,14 +39,13 @@ section {
 }
 
 .jumbotron {
-  min-height: 100vh;
+  max-height: 100vh;
   background-color: #e9ecef;
   display: flex;
-  padding: 5rem;
+  padding: 5em;
   align-items: center;
   color: var(--text);
   z-index: -1;
-  font-weight: 400;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -62,8 +62,13 @@ section {
 }
 
 .welcome-title {
-  font-size: 2.2rem;
-  margin-bottom: 1.5rem;
+  overflow-x: hidden;
+  font-size: var(--heading);
+  margin-bottom: 1em;
+}
+
+.welcome-title h1{
+  height: min-content; 
 }
 
 .welcome-title span {
@@ -84,13 +89,13 @@ section {
   border: 2px solid transparent;
   border-image: var(--grad);
   background-image: var(--grad);
-  padding: 0.5rem 1.8rem;
+  padding: 0.5em 1.8em;
   border-image-slice: 1;
   -webkit-background-clip: text;
   background-clip: text;
   font-weight: 700;
   color: transparent;
-  font-size: 1.3rem;
+  font-size: 1.3em;
   -webkit-text-fill-color: transparent;
 }
 
@@ -105,6 +110,10 @@ section {
   background-clip: text;
 }
 
+
+
+
+
 /* about--------------------------------- */
 
 .about {
@@ -114,14 +123,14 @@ section {
   align-items: center;
   background-image: var(--grad);
   /* text-align: center; */
-  padding: 2rem 1rem;
+  padding: 2em 1em;
 }
 
 .about h1 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #fff;
-  font-size: 3rem;
+  font-size: 3em;
   text-transform: uppercase;
 
   /* letter-spacing: 2px; */
@@ -137,7 +146,7 @@ section {
   width: 70%;
   margin: 0 auto;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -177,12 +186,12 @@ section {
 
 .project-heading {
   font-size: 3em;
-  padding: 3rem 0rem 1rem 0rem;
+  padding: 2em 0em 1em 0em;
 }
 .projects-cards {
   width: 80%;
   margin: 0 auto;
-  padding: 2em 0 2rem 0;
+  padding: 2em 0 2em 0;
   display: flex;
   justify-content: space-between;
   text-align: start;
@@ -209,14 +218,14 @@ section {
     box-shadow 0.5s;
 }
 .project-name {
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
   text-transform: capitalize;
 }
 
 .project-desc > p {
   color: var(--text);
   line-height: 1.5;
-  margin-bottom: 1.8rem;
+  margin-bottom: 1.8em;
 }
 
 /* footer--------------------------------------------------- */
@@ -229,7 +238,7 @@ section {
   height: 40vh;
   width: 100%;
   background-image: var(--grad);
-  /* margin-top: -2rem; */
+  /* margin-top: -2em; */
   clip-path: polygon(0 70%, 100% 20%, 100% 100%, 0 100%);
 }
 
@@ -242,7 +251,7 @@ section {
 .top {
   height: 5vh;
   display: inline-block;
-  margin: 1rem 0 2rem 0;
+  margin: 1em 0 2em 0;
 }
 
 .top a {
@@ -254,4 +263,74 @@ section {
 
 .top:hover {
   transform: scale(1.2, 1.2);
+}
+
+
+/* meidaqueries------------------------- */
+
+
+@media(max-width : 768px ){
+
+
+  .jumbotron{
+    /* flex-direction: column; */
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    font-size: 1em;
+    width: 100vw;
+  }
+
+  .container{
+    
+    width: 80%;
+    height: 80vh;
+  }
+  
+  .welcome-title{
+    font-size: 1.5em;
+    padding-top: 15%;
+    margin: 0;
+    height: 50%;
+  } 
+
+
+  .welcome-svg{
+    display: none;
+  }
+  .btns{
+    width: 100%;
+    height: 25%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 0.9em;
+  }
+
+  .btn{
+    width: 100%;
+    text-align: center;
+  }
+
+  .about{
+    padding: 0;
+  }
+
+  .about > h1{
+    font-size: 1.8em;
+    letter-spacing: 2px;
+  }
+
+  .profile-pic{
+    width: 40vw;
+  }
+  .profile-desc{
+    padding: 0;
+    margin: 0;
+    width: 80%;
+  }
+  .profile-link-menu{
+    width: 80%;
+  }
+
 }
