final mediaqueries complete

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@
 
 :root {
   --text: #1e1d29;
-  --heading : 2.2em;
+  --heading: 2.2em;
   --grad: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 }
 
@@ -67,8 +67,8 @@ section {
   margin-bottom: 1em;
 }
 
-.welcome-title h1{
-  height: min-content; 
+.welcome-title h1 {
+  height: min-content;
 }
 
 .welcome-title span {
@@ -109,10 +109,6 @@ section {
   -webkit-background-clip: text;
   background-clip: text;
 }
-
-
-
-
 
 /* about--------------------------------- */
 
@@ -265,14 +261,10 @@ section {
   transform: scale(1.2, 1.2);
 }
 
-
 /* meidaqueries------------------------- */
 
-
-@media(max-width : 768px ){
-
-
-  .jumbotron{
+@media (max-width: 768px) {
+  .jumbotron {
     /* flex-direction: column; */
     margin: 0;
     padding: 0;
@@ -281,24 +273,22 @@ section {
     width: 100vw;
   }
 
-  .container{
-    
+  .container {
     width: 80%;
     height: 80vh;
   }
-  
-  .welcome-title{
+
+  .welcome-title {
     font-size: 1.5em;
     padding-top: 15%;
     margin: 0;
     height: 50%;
-  } 
+  }
 
-
-  .welcome-svg{
+  .welcome-svg {
     display: none;
   }
-  .btns{
+  .btns {
     width: 100%;
     height: 25%;
     flex-direction: column;
@@ -307,30 +297,47 @@ section {
     font-size: 0.9em;
   }
 
-  .btn{
+  .btn {
     width: 100%;
     text-align: center;
   }
 
-  .about{
+  .about {
     padding: 0;
+    justify-content: space-evenly;
   }
 
-  .about > h1{
+  .about > h1 {
     font-size: 1.8em;
     letter-spacing: 2px;
   }
 
-  .profile-pic{
+  .profile-pic {
     width: 40vw;
   }
-  .profile-desc{
+  .profile-desc {
     padding: 0;
     margin: 0;
     width: 80%;
   }
-  .profile-link-menu{
+  .profile-link-menu {
+    justify-content: space-between;
     width: 80%;
   }
 
+  .projects h1 {
+    font-size: 1.8em;
+    padding: 1em 0 0 0;
+  }
+  .projects-cards {
+    flex-direction: column-reverse;
+  }
+  .project-desc {
+    margin-top: 1em;
+    width: 100%;
+  }
+  .project-name {
+    padding: 0;
+    margin-top: 1rem;
+  }
 }
