--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
 }
 
 :root {
@@ -204,6 +205,7 @@ section {
 }
 
 .project-desc {
+  
   width: 30%;
 }
 
@@ -274,6 +276,7 @@ section {
 /* meidaqueries------------------------- */
 
 @media (max-width: 768px) {
+  
   .jumbotron {
     /* flex-direction: column; */
     margin: 0;
@@ -326,8 +329,9 @@ section {
     width: 40vw;
   }
   .profile-desc {
+    font-size: 1.1rem;
     padding: 0;
-    margin: 0;
+    margin: -1vh 0 1vh 0;
     width: 80%;
   }
   .profile-link-menu {
